--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
   },
   "homepage": "https://github.com/andres-boltdasarini/excel#readme",
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.0.3",
+    "html-webpack-plugin": "^4.3.0",
+    "mini-css-extract-plugin": "^0.10.0",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
   }
