--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "excel",
   "version": "1.0.0",
   "description": "Pure JavaScript Excel App",
-  "main": "index.js",
+  "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "cross-env NODE_ENV=development webpack-dev-server --open",
